2009-12-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Ignore more files in Git.
	* .gitignore: Here.

2009-12-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Resurrect Dubins curve from previous commits.
	* include/kwsPlus/directPath/reedsSheppDirectPath.h,
	* src/reedsSheppDirectPath.cpp: Re-insert previously
	deleted/commented code.

2009-12-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Generate config.h header.
	* configure.ac: Generate ``config.h'' to make compilation
	lines less verbose.

2009/07/27	kwsPlus release 1.8

2009-05-01  Florent Lamiraux  <florent@laas.fr>

	Add default argument in kwsPlusSMLinear::create().
	* include/kwsPlus/directPath/kwsPlusSMLinear.h: default
	vector of coefficients is empty vector.

2009-04-30  Florent Lamiraux  <florent@laas.fr>

	Add missing file in commit cde2059b3cb.
	* build-aux/boost.m4: New.
	* build-aux/init.mk: New.

2009-04-30  Florent Lamiraux  <florent@laas.fr>

	Homogeneize style in headers and complete doc.
	* include/kwsPlus/kwsPlusDPLinear.h: Remove obsolete headers
	* include/kwsPlus/kwsPlusSMLinear.h: Remove obsolete headers

2009/04/30 Florent Lamiraux <florent@laas.fr>

	Better handle dependency to boost at configuration
	  * implement boost.m4 macro to check that boost is actually installed.

2009/04/17	kwsPlus release 1.7

	58. Create nodes with node factory in ChppVisRdmBuilder.
	57. Distribute headers in subdirectories.
	56. Install doxytag file in ${datadir}/doc/kwsPlus/html directory.

2009/02/03	kwsPlus release 1.6

	55. Generate unitTesting/Makefile.in even without --enable-unitTesting
	54. Removed using namespace commands in headers.

2008/09/08	kwsPlus release 1.5

	53. Define macro FLIC_HUGE_VAL.
	52. Using the addNode() of roadmap builder instead of roadmap itself.
	51. CflicDistance::distance() now returns 1e6 instead of HUGE_VAL when
	    direct path does not exist.
	50. Change dependency in unitTesting (testKwsDirectPath -> testKineoWorks).
	49. Fix Typo in documentation.